@@ -12,6 +12,7 @@ Performance improvements
 
 Examples and applications
 -------------------------
+- added parsing functionality for optcumulative constraints in CIP format
 
 Interface changes
 -----------------
